[package]
name = "ac2o3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.0"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = {version = "0.14", features=["openblas-system"]}
anyhow = "1.0.51"
derive_builder = "0.10.2"
rand = "0.8.4"