[package]
name = "ac2o3"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.0"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = {version = "0.14", features=["openblas-system"]}
anyhow = "1.0.51"
derive_builder = "0.10.2"
rand = "0.8.3"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
